dataset1235/2025-2/610742602/users/14016319/executions/2563853024_593159971.log
== SUBMISSION (2025-09-02 20:23:37)
-- CODE: 
nota1 = float(input("Insira a nota1 aqui")
nota2 = float(input(Insira a nota2 aqui"))
nota3 = float(input("Insira a nota3 aqui"))
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:34)
-- CODE: 
nota1 = float(input("Insira a nota1 aqui"))
nota2 = float(input("Insira a nota2 aqui"))
nota3 = float(input("Insira a nota3 aqui"))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:23:44)
-- CODE: 
nota1 = float(input("Insira a nota1 aqui")
nota2 = float(input("Insira a nota2 aqui"))
nota3 = float(input("Insira a nota3 aqui"))
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("Insira a nota1 aqui")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("Insira a nota1 aqui")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("Insira a nota1 aqui")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("Insira a nota1 aqui")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("Insira a nota1 aqui")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("Insira a nota1 aqui")
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:14)
-- CODE: 
nota1 = float(input("Insira a nota1 aqui"))
nota2 = float(input("Insira a nota2 aqui"))
nota3 = float(input("Insira a nota3 aqui"))
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui13.866666666666667
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui20.033333333333335
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui12.166666666666666
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui4.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui21.233333333333334
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
Insira a nota1 aquiInsira a nota2 aquiInsira a nota3 aqui6.333333333333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:23:34)
-- CODE: 
nota1 = float(input("Insira a nota1 aqui")
nota2 = float(input(Insira a nota2 aqui"))
nota3 = float(input("Insira a nota3 aqui"))
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:23:17)
-- CODE: 
nota1 = float(input("Insira a nota1 aqui")
nota2 = float(input(Insira a nota2 aqui"))
nota3 = float(input("Insira a nota3 aqui"))
media = nota1 + nota2 + notas3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(Insira a nota2 aqui"))
                                           ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
